# cis194

./: Homework.cabal  README.md
src/: Main.hs
src-test/: HomeworkTest.hs
src-test/Tasks/: CalculatorTest.hs  CreditCardValidationTest.hs  FibonacciTest.hs  FoldsTest.hs  GolfTest.hs  HanoiTest.hs  JoinListTest.hs  LogAnalysisTest.hs  RiskTest.hs
src/Tasks/: AParser.hs  Buffer.hs  Calculator.hs  CreditCardValidation.hs  Editor.hs  Employee.hs  ExprT.hs  Fibonacci.hs  Folds.hs  Golf.hs  Hanoi.hs  JoinList.hs  JoinListEditor.hs  Log.hs  LogAnalysis.hs  Parser.hs  Party.hs  Risk.hs  SExpr.hs  Scrabble.hs  Sized.hs  StringBufEditor.hs  StringBuffer.hs
